// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > calls onBlur when the textarea loses focus 1`] = `
<div>
  <label
    class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":r8:"
  />
  <textarea
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":r8:"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > calls onChange when the value changes 1`] = `
<div>
  <label
    class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":r6:"
  />
  <textarea
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":r6:"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > displays help text when provided 1`] = `
<div>
  <label
    class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":ra:"
  />
  <textarea
    aria-describedby=":rb:"
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":ra:"
    placeholder="Enter text"
  />
  <div
    class="ds-mt-2 ds-block ds-text-help ds-text-secondary-gray ds-font-arial"
    id=":rb:"
  >
    Help text
  </div>
</div>
`;

exports[`Textarea > displays the label when hideLabel is false 1`] = `
<div>
  <label
    class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":r2:"
  >
    Test Label
  </label>
  <textarea
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":r2:"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > hides the label when hideLabel is true 1`] = `
<div>
  <label
    class="ds-hidden ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":r4:"
  />
  <textarea
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":r4:"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > renders without crashing 1`] = `
<div>
  <label
    class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":r0:"
  />
  <textarea
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":r0:"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > sets the correct number of rows 1`] = `
<div>
  <label
    class="ds-mb-4 ds-inline-block ds-align-top ds-text-form-label ds-font-arial ds-text-black"
    for=":rc:"
  />
  <textarea
    autocomplete="off"
    class="ds-block ds-w-full ds-rounded ds-border ds-border-border-gray ds-bg-white ds-p-5 ds-text-black ds-outline-none placeholder:ds-text-secondary-gray ds-font-arial ds-text-body-md"
    id=":rc:"
    placeholder="Enter text"
    rows="5"
  />
</div>
`;
